[project]
name = "comfy-mecha"
description = "model merging nodes powered by sd-mecha, a memory efficient merging library"
version = "1.2.30"
license = { file = "LICENSE" }
dependencies = ["sd-mecha==1.0.3"]

[project.urls]
Repository = "https://github.com/ljleb/comfy-mecha"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "ljleb"
DisplayName = "mecha"
Icon = ""
